# type_oh

./: .gitignore  Cargo.toml  README.md  styles.css
src/: app.rs  ascii_chars.rs  common.rs  main.rs  stats.rs  svg_keyboard.rs  timer.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
