[package]
name = "type_oh-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
# rand = { version = "0.9.1", features = ["serde"] }
enum_ext = { version = "0.4.1" }
chrono = { version = "0.4.41", features = ["serde"] }

[workspace]
members = ["src-tauri"]
